# sap-kcl

./: .gitignore  README.md  example_interactive_agents.py  example_interactive_autocode_chat.py  extract_autocode_data.py  generate_kcl_sap.py  landing.html  pyproject.toml  requirements.in  requirements.txt  setup.py  streamlit_app.py  streamlit_app_open.py  ui_autocode.py
Chats/: chat_setup.py  generate_sap.py  generate_template.py
Classes/: auto_code_classes.py  chat_classes.py  interactive_autocode_conversation.py  prompt_register_class.py  template_class.py
Examples/: example_auto_code_API.py  example_auto_code_pipeline.py  example_auto_code_pipline.py  example_interactive_autocode_chat.py  files_exaple.py
Examples/Auto Code Pipeline/: example_auto_code_pipeline.py  (+3 more)
GenerateTemplates/: generate_kcl_template.py  generate_simple_template.py
Prompts/: prompts_05.py  prompts_06.py  prompts_07.py
Protocols/: boppp.txt
SAP/: gpt-4o-mini-2024-07-18_boppp.json  gpt-4o-mini-2024-07-18_boppp.txt
SAPs/: bopp_sap_content.txt  bopp_sap_v0.1.docx
Templates/: DRAFT Q-162 (SAP Template) V2.0 - DS 171224 1_tagged.docx  DRAFT Q-162 (SAP Template) V2.0.docx  sapai_kcl_template_v0.1.docx  sapai_kcl_template_v0.2_clean.docx
WriteSAPs/: ACTISSIST_sap.py  LiPOC_sap.py  SAATHI2_sap.py  boppp_sap.py  compeers.py  demo_sap.py  feeling_safer.py  liverpool_sap.py  psi_sap.py  short_test.py  test_sap.py  test_sap_autocode.py  validation_saps.py  validation_saps_save_via_api.py
tests/: test_auto_code_api_classes.py
text files/: kcl_prompts.txt  validation_prompts.txt
(+31 files in other folders)
